# ParaConquer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  New Microsoft Word Document.docx  ParaConquer.sln  README.md  Simple.json  TestSerilize.ser  imgui.ini  paraconquer_resource.res
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  cpp.hint
Core/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json.command
Core/src/include/: app.hpp  assert.hpp  core_header.hpp  guid.hpp  log.hpp  window.hpp
Core/src/include/data_structures/: sparse_sets.hpp  type_sparse_set.hpp
Core/src/include/ecs/: archetype.h  component.h  component_array.hpp  components_manager.hpp  ecs_archetype.h  ecs_context.h  ecs_front.h  ecs_header.h  ecs_system.h  entity_manager.h  entity_register.h  sparse_sets.hpp  system_manager.hpp
Core/src/include/input/: in_out.h  low_pass_filter.hpp
Core/src/include/io/: core_io.hpp  imgui_context.h  in_out.h  window.hpp
Core/src/include/low_renderer/: command_list.hpp  descriptor_set.hpp  frame_buffer.hpp  gpu_allocator.hpp  gpu_buffer.hpp  gpu_buffer_handle.hpp  gpu_handle.hpp  index_buffer.hpp  physical_devices.hpp  render_instance.hpp  rhi.hpp  rhi_context.hpp  rhi_device.hpp  rhi_render_pass.hpp  rhi_typedef.h  sampler.hpp  swap_chain.hpp  uniform_buffer.hpp  vertex.cpp  vertex.hpp  vertex_buffer.hpp
Core/src/include/math/: complex.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  matrix_transformation.hpp  quaternion.hpp  toolbox.hpp  toolbox_headerfile.hpp  toolbox_typedef.hpp  vector2.hpp  vector3.hpp  vector4.hpp
Core/src/include/physics/: box_collider.hpp  physics.h  physics_wrapper.hpp  rigid_body.hpp  sphere_collider.hpp
Core/src/include/reflection/: compiletime_key.hpp  reflection_typedef.hpp  reflector.hpp
Core/src/include/rendering/: RHI.hpp  camera.hpp  descriptor_layout_binding.hpp  draw_gizmos.hpp  draw_quad.hpp  frame_buffer.hpp  gbuffer.h  gbuffers.hpp  gpu_buffer.h  gpu_buffer.hpp  gpu_typedef.hpp  light.hpp  material.hpp  render_pass.hpp  render_resource.hpp  renderer.hpp  renderer_resource.hpp  rendering_typedef.h  rhi_typedef.h  shader_typedef.h  skydom.hpp  vertex.hpp  viewport.hpp  vulkan_vertex_buffer.hpp
Core/src/include/resources/: Resource.hpp  descriptor_set_layout.h  file_loader.hpp  material.hpp  material_instance.hpp  mesh.hpp  resource.hpp  resource_manager.hpp  sampler.hpp  scene_lights_manager.h  shader_program.h  shader_source.cpp  shader_source.h  shader_source.hpp  texture.hpp
Core/src/include/scripting/: scripting_lua.hpp
Core/src/include/serialize/: serializer.h
Core/src/include/time/: core_time.hpp  timer.hpp
Core/src/include/world/: component.hpp  component_register.h  scene.hpp  scene_graph.hpp  skybox.hpp  static_mesh.hpp  system.hpp  transform.hpp  world.hpp  world_header_typedef.hpp
Core/src/source/: app.cpp  guid.cpp  log.cpp  window.cpp
Core/src/source/data_structures/: sparse_sets.cpp  type_sparse_set.cpp
Core/src/source/ecs/: archetype.cpp  component.cpp  component_array.cpp  components_manager.cpp  ecs_archetype.cpp  ecs_context.cpp  ecs_system.cpp  entity_manager.cpp  entity_register.cpp  sparse_sets.cpp  system_manager.cpp
Core/src/source/input/: in_out.cpp  low_pass_filter.cpp
Core/src/source/io/: core_io.cpp  imgui_context.cpp  in_out.cpp  low_pass_filter.cpp  window.cpp
Core/src/source/low_renderer/: command_list.cpp  descriptor_set.cpp  frame_buffer.cpp  gpu_allocator.cpp  gpu_buffer.cpp  gpu_buffer_handle.cpp  gpu_handle.cpp  index_buffer.cpp  physical_devices.cpp  render_instance.cpp  rhi.cpp  rhi_context.cpp  rhi_device.cpp  rhi_render_pass.cpp  sampler.cpp  swap_chain.cpp  uniform_buffer.cpp  vertex.cpp  vertex_buffer.cpp
Core/src/source/physics/: box_collider.cpp  physics_wrapper.cpp  rigid_body.cpp  sphere_collider.cpp
Core/src/source/reflection/: reflector.cpp
Core/src/source/rendering/: RHI.cpp  camera.cpp  descriptor_layout_binding.cpp  draw_gizmos.cpp  draw_quad.cpp  frame_buffer.cpp  gbuffer.cpp  gbuffers.cpp  gpu_buffer.cpp  light.cpp  material.cpp  render_pass.cpp  render_resource.cpp  renderer.cpp  renderer_resource.cpp  skybox_render.cpp  skybox_render.h  skydom.cpp  vertex.cpp  vertex_buffer.cpp  viewport.cpp
Core/src/source/resources/: Resource.cpp  descriptor_set_layout.cpp  file_loader.cpp  material.cpp  material_instance.cpp  mesh.cpp  resource.cpp  resource_manager.cpp  (+5 more)
Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  main.cpp
Editor/src/include/: asset_browser.hpp  dock_space.hpp  edit_world_window.hpp  editor.hpp  editor_header.hpp  editor_window.hpp  file_system_watcher.h  hierachy.hpp  imgui_helper.h  inspector.hpp  profiler.hpp  scene_button.hpp  transform_gizmo.hpp  world_view_window.hpp
Editor/src/source/: asset_browser.cpp  dock_space.cpp  edit_world_window.cpp  editor.cpp  editor_window.cpp  file_system_watcher.cpp  hierachy.cpp  imgui_helper.cpp  inspector.cpp  main.cpp  profiler.cpp  scene_button.cpp  transform_gizmo.cpp  world_view_window.cpp
Profiler/: CMakeLists.txt
Profiler/src/include/: perf_region.hpp
Profiler/src/source/: main.cpp
VulkanAPI/: CMakeLists.txt  VulkanAPI.filters  VulkanAPI.vcxproj  VulkanVulkanAPI.vcxproj  VulkanVulkanAPI.vcxproj.filters
VulkanAPI/src/: Source.cpp
VulkanAPI/src/include/: helper_functions.hpp  rhi_vulkan_parser.hpp  transition_image_layout.hpp  vulkan_command_list.hpp  vulkan_context.hpp  vulkan_device.hpp  vulkan_frame_buffer.hpp  vulkan_gpu_allocator.hpp  vulkan_header.h  vulkan_instance.hpp  vulkan_memory_allocator.hpp  vulkan_physical_devices.hpp  vulkan_render_pass.hpp  vulkan_swap_chain.hpp  vulkan_typedef.h
VulkanAPI/src/source/: helper_functions.cpp  rhi_vulkan_parser.cpp  transition_image_layout.cpp  vulkan_command_list.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_frame_buffer.cpp  vulkan_gpu_allocator.cpp  vulkan_header.cpp  vulkan_instance.cpp  vulkan_memory_allocator.cpp  vulkan_physical_devices.cpp  vulkan_render_pass.cpp  vulkan_swap_chain.cpp  vulkan_typedef.cpp
(+275 files in other folders)
